Adding mapping creation using ODK API and SF API
* Creating the mapping endpoints
* Adding new, create, show for mappings
* Loading ODK forms and fields during create process
* Loading SF forms and fields during create process

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,19 @@
 <html>
 <head>
   <title>SalesForce</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag    "application", media: "all" %>
+  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+  <body>
+    <%= render "shared/header" %>
 
-<%= yield %>
+    <div class='container'>
+      <%= render "shared/sidebar" %>
 
-</body>
+      <div class='col-md-10'>
+        <%= yield %>
+      </div>
+    </div>
+  </body>
 </html>
