Adding drag and drop creating and editing to mappings
* Creating a more interactive UX for managing mappings

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,1 +1,7 @@
 @import "bootstrap";
+@import "jquery.ui.core";
+@import "jquery.ui.theme";
+@import "jquery.ui.autocomplete";
+
+@import "mappings";
+@import "mapping_fields";
