Last changes before switching to angular

--- a/app/views/mappings/_odk_column.html.erb
+++ b/app/views/mappings/_odk_column.html.erb
@@ -18,6 +18,7 @@
 
     <%= odk_mapping_field.hidden_field :field_name %>
     <%= odk_mapping_field.hidden_field :field_type %>
+    <%= odk_mapping_field.hidden_field :_destroy, class: 'sf-delete' %>
     <%= odk_mapping_field.hidden_field :salesforce_mappings, class: 'sf-mapping' %>
   </div>
 <% end %>
