Making new mapping page into an angular app.
* Creating a number of endpoints for the angular app
* Building the mapping in angular
* Making the fields cloneable

--- a/app/assets/stylesheets/mapping_fields.css.scss
+++ b/app/assets/stylesheets/mapping_fields.css.scss
@@ -12,8 +12,12 @@
   }
 }
 
-.saleforce-mapping-field {
-  min-height: 50px;
+.odk-field {
+  font-size: 20px;
+}
+
+.sortable-location {
+  min-height: 150px;
 }
 
 .odk-field {
