Finishing angular functionality for mappings#new
* Creating a new mapping in anuglar
* Creating a MappingService in angular to handle the content switching

--- a/app/assets/stylesheets/mappings.css.scss
+++ b/app/assets/stylesheets/mappings.css.scss
@@ -9,3 +9,19 @@
   }
 
 }
+
+.odk-list-item {
+  width: 165px;
+}
+
+.odk-label {
+  line-height: 2;
+  margin-right: 5px;
+  font-size: 20px;
+}
+
+.sf-label {
+  display: inline-block;
+  margin-top: 5px;
+  font-size: 25px;
+}
