--- a/app/views/mappings/new.html.erb
+++ b/app/views/mappings/new.html.erb
@@ -4,7 +4,6 @@
 </ol>
 
 <h3>Create a new mapping</h3>
-
 <div ng-app="mapping">
-  <div ng-controller="NewMappingCtrl" ng-include="'/assets/mappings/new.html'"></div>
+  <div ng-controller="MappingCtrl" ng-include="'/assets/mappings/new.html'"></div>
 </div>
