--- a/app/assets/templates/mappings/new.html
+++ b/app/assets/templates/mappings/new.html
@@ -1,3 +1,9 @@
+<div id="errorExplanation" class='text-danger' ng-show="errors">
+  <ul>
+    <li ng-repeat="error in errors">{{error}}</li>
+  </ul>
+</div>
+
 <div class="form-group">
   <label for="mapping_name">Name</label>
   <input type="text" ng-model="mapping.name" class='form-control' />
@@ -8,3 +14,5 @@
   </div>
   <div class='col-md-6' ng-include="'/assets/mappings/sf_column.html'"></div>
 </div>
+
+<a href='#' ng-click="saveMapping()" class='btn btn-success'>Create Mapping</a>
