--- a/app/views/mappings/show.html.erb
+++ b/app/views/mappings/show.html.erb
@@ -10,18 +10,32 @@
   <li><%= link_to "Mappings", :mappings %></li>
   <li><%= @mapping.name %></li>
 </ol>
-<% @mapping.odk_mapping_fields.each do |odk_mapping_field| %>
-  <div class='odk-field'>
-    <div class="panel panel-default">
-      <div class="panel-heading"><%= odk_mapping_field.field_name  %> - <%= odk_mapping_field.field_type %></div>
-      <div class="panel-body">
-        <h4>Mapped Salesforce Fields</h4>
-        <ul class='saleforce-mapping-field list-inline'>
-          <% odk_mapping_field.salesforce_mapping_fields.each do |sf_field| %>
-            <li><span class="label label-default salesforce-autocomplete-field"><%= sf_field.object_name %>:<%= sf_field.field_name %></span></li>
+
+<table class='table'>
+  <thead>
+    <tr>
+      <th><b>ODK Fields</b></th>
+      <th></th>
+      <th><b>Salesforce Fields</b></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @mapping.salesforce_fields.each do |sf_field| %>
+      <tr>
+        <td>
+          <% sf_field.odk_fields.each do |odk_field| %>
+            <span class='label label-default odk-label'>
+              <%= odk_field.field_name %>: <%= odk_field.field_type %>
+            </span>
           <% end %>
-        </ul>
-      </div>
-    </div>
-  </div>
-<% end %>
+        </td>
+        <td>=></td>
+        <td>
+          <span class='label label-primary sf-label'>
+            <%= sf_field.object_name %>: <%= sf_field.field_name %>
+          </span>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
