--- a/app/views/mappings/show.html.erb
+++ b/app/views/mappings/show.html.erb
@@ -3,6 +3,9 @@
     <li class="list-group-item">
       <%= link_to "New Mapping", [:new, :mapping] %>
     </li>
+    <li class='list-group-item'>
+      <%= link_to "Edit Mapping", [:edit, @mapping] %>
+    </li>
   </ul>
 <% end %>
 
