--- a/app/assets/templates/mappings/sf_column.html
+++ b/app/assets/templates/mappings/sf_column.html
@@ -1,15 +1,14 @@
-<div class="form-group">
-  <label for="salesforce_object_name">SalesForce Object</label>
-  <select ng-model="mapping.saleforce_object_name" ng-options="o as o for o in salesForceObjects" class='form-control' />
-</div>
+<label>Saleforce Mapping Fields</label>
 
-<div class="panel panel-default" ng-repeat="salesforceObjectField in salesforceObjectFields">
-  <div class="panel-heading">{{salesforceObjectField.name}}</div>
-  <div class="panel-body">
-    <ul class="list-group sortable-location connected-sortable" ui-sortable="sortableOptions" ng-model="salesforceObjectField.odk_fields">
-      <li class='list-group-item' ng-repeat="odkField in salesforceObjectField.odk_fields">
-        {{odkField.nodeset}}: {{odkField.type}}
-      </li>
-    </ul>
+<div class='sortable-location sf-connected-sortable' ui-sortable="sfSortableOptions" ng-model="mapping.salesforce_fields">
+  <div class="panel panel-default" ng-repeat="sfField in mapping.salesforce_fields">
+    <div class="panel-heading">{{sfField.object_name}} - {{sfField.field_name}}</div>
+    <div class="panel-body">
+      <ul class="list-group sortable-location odk-connected-sortable" ui-sortable="odkSortableOptions" ng-model="sfField.odk_fields">
+        <li class='list-group-item' ng-repeat="odkField in sfField.odk_fields">
+          {{odkField.field_name}}: {{odkField.field_type}}
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
