Finishing 3 column mapping design
* Correcting ajax calls with ActiveModelSerializer
* Reorganizing layout
* Adding helper text
* Fixing save issues on update
* Create and Update are working

--- a/app/assets/templates/mappings/odk_column.html
+++ b/app/assets/templates/mappings/odk_column.html
@@ -1,6 +1,8 @@
+<h4>1. Select an ODK Field</h4>
+
 <div class="form-group">
   <label for="mapping_odk_formid">Open Data Kit Form</label>
-  <select ng-model="mapping.odk_formid" ng-options="o as o for o in odkForms" class='form-control'></select>
+  <select ng-disabled="editMode" ng-model="mapping.odk_formid" ng-options="o as o for o in odkForms" class='form-control'></select>
 </div>
 
 <ul class='list-group odk-connected-sortable sortable-location' ui-sortable="odkSortableOptions" ng-model="odkFormFields">
