--- a/app/assets/templates/mappings/sf_search_column.html
+++ b/app/assets/templates/mappings/sf_search_column.html
@@ -1,3 +1,5 @@
+<h4>2. Select Salesforce Fields</h4>
+
 <div class="form-group">
   <label for="salesforce_object_name">SalesForce Object</label>
   <select ng-model="mapping.saleforce_object_name" ng-options="o as o for o in salesForceObjects" class='form-control' />
@@ -5,6 +7,6 @@
 
 <ul class='list-group sf-connected-sortable sortable-location' ui-sortable="sfSortableOptions" ng-model="salesforceObjectFields">
   <li class='list-group-item' ng-repeat="salesforceObjectField in salesforceObjectFields">
-    {{salesforceObjectField.fieldName}}
+    {{salesforceObjectField.field_name}}
   </li>
 </ul>
