--- a/app/assets/templates/mappings/sf_column.html
+++ b/app/assets/templates/mappings/sf_column.html
@@ -1,14 +1,24 @@
-<label>Saleforce Mapping Fields</label>
+<h4>3. Combine the SF and ODK fields to create a mapping</h4>
 
-<div class='sortable-location sf-connected-sortable' ui-sortable="sfSortableOptions" ng-model="mapping.salesforce_fields">
-  <div class="panel panel-default" ng-repeat="sfField in mapping.salesforce_fields">
-    <div class="panel-heading">{{sfField.object_name}} - {{sfField.field_name}}</div>
-    <div class="panel-body">
-      <ul class="list-group sortable-location odk-connected-sortable" ui-sortable="odkSortableOptions" ng-model="sfField.odk_fields">
-        <li class='list-group-item' ng-repeat="odkField in sfField.odk_fields">
-          {{odkField.field_name}}: {{odkField.field_type}}
-        </li>
-      </ul>
+<div class='panel panel-warning'>
+  <div class='panel-heading'>Drag Salesforce Fields into me</div>
+  <div class='panel-body'>
+
+    <div class='sortable-location sf-connected-sortable' ui-sortable="sfSortableOptions" ng-model="mapping.salesforce_fields">
+      <div class="panel panel-default" ng-repeat="sfField in mapping.salesforce_fields">
+        <div class="panel-heading">
+          <b>Salesforce Field</b>: {{sfField.object_name}} - {{sfField.field_name}}
+          <p class="text-danger">Drag ODK Fields into me</p>
+        </div>
+        <div class="panel-body">
+          <ul class="list-group sortable-location odk-connected-sortable" ui-sortable="odkSortableOptions" ng-model="sfField.odk_fields">
+            <li class='list-group-item' ng-repeat="odkField in sfField.odk_fields">
+              {{odkField.field_name}}: {{odkField.field_type}}
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
+
   </div>
 </div>
