--- a/app/assets/stylesheets/mappings.css.scss
+++ b/app/assets/stylesheets/mappings.css.scss
@@ -25,3 +25,17 @@
   margin-top: 5px;
   font-size: 25px;
 }
+
+input.destroy-field {
+  display: none;
+
+  & + label {
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+  }
+
+  &:checked + label {
+    color: red;
+  }
+}
