card 1 - Restyling button position
* Moving the button position to the right
* Adding boostrap-ui

--- a/app/assets/stylesheets/mappings.css.scss
+++ b/app/assets/stylesheets/mappings.css.scss
@@ -33,6 +33,10 @@ input.destroy-field {
     font-size: 20px;
     font-weight: bold;
     color: black;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   &:checked + label {
