--- a/app/assets/templates/mappings/odk_column.html
+++ b/app/assets/templates/mappings/odk_column.html
@@ -5,8 +5,14 @@
   <select ng-disabled="editMode" ng-model="mapping.odk_formid" ng-options="o as o for o in odkForms" class='form-control'></select>
 </div>
 
-<ul class='list-group odk-connected-sortable sortable-location' ui-sortable="odkSortableOptions" ng-model="odkFormFields">
-  <li class='list-group-item' ng-repeat="odkFormField in odkFormFields">
-    {{odkFormField.field_name}}: {{odkFormField.field_type}}
-  </li>
-</ul>
+<div class="form-group">
+  <input ng-model="odkFilter.field_name" type='text' placeholder="Filter ODK fields" class='form-control' />
+</div>
+
+<div class='external-field-holder'>
+  <ul class='list-group odk-connected-sortable sortable-location' ui-sortable="odkSortableOptions" ng-model="odkFormFields">
+    <li class='list-group-item' ng-repeat="odkFormField in odkFormFields | filter: odkFilter">
+      {{odkFormField.field_name}}
+    </li>
+  </ul>
+</div>
