--- a/app/assets/templates/mappings/sf_search_column.html
+++ b/app/assets/templates/mappings/sf_search_column.html
@@ -9,8 +9,10 @@
   <input ng-model="sfFilter.field_name" type='text' placeholder="Filter SF fields" class='form-control' />
 </div>
 
-<ul class='list-group sf-connected-sortable sortable-location' ui-sortable="sfSortableOptions" ng-model="salesforceObjectFields">
-  <li class='list-group-item' ng-repeat="salesforceObjectField in salesforceObjectFields | filter: sfFilter">
-    {{salesforceObjectField.field_name}}
-  </li>
-</ul>
+<div class='external-field-holder'>
+  <ul class='list-group sf-connected-sortable sortable-location' ui-sortable="sfSortableOptions" ng-model="salesforceObjectFields">
+    <li class='list-group-item' ng-repeat="salesforceObjectField in salesforceObjectFields | filter: sfFilter">
+      {{salesforceObjectField.field_name}}
+    </li>
+  </ul>
+</div>
