moving ng templates to public

--- a/app/views/mappings/edit.html.erb
+++ b/app/views/mappings/edit.html.erb
@@ -6,5 +6,5 @@
 
 <h3>Edit the mapping</h3>
 <div ng-app="mapping">
-  <div ng-controller="MappingCtrl" ng-include="'/assets/mappings/edit.html'" ng-init="init(<%= @mapping.id %>)"></div>
+  <div ng-controller="MappingCtrl" ng-include="'/ng_templates/mappings/edit.html'" ng-init="init(<%= @mapping.id %>)"></div>
 </div>
