--- a/app/views/mappings/new.html.erb
+++ b/app/views/mappings/new.html.erb
@@ -5,5 +5,5 @@
 
 <h3>Create a new mapping</h3>
 <div ng-app="mapping">
-  <div ng-controller="MappingCtrl" ng-include="'/assets/mappings/new.html'"></div>
+  <div ng-controller="MappingCtrl" ng-include="'/ng_templates/mappings/new.html'"></div>
 </div>
