--- a/app/views/mappings/show.html.erb
+++ b/app/views/mappings/show.html.erb
@@ -42,10 +42,11 @@
     <% end %>
   </tbody>
 
-  <%= form_tag(dispatch_surveys_mapping_path(@mapping)) do %>
-    <%= label_tag(:only, "How many surveys to dispatch? ") %>
-    <%= text_field_tag(:only) %>
-    <%= submit_tag("Go!") %>
+  <%= form_tag dispatch_surveys_mapping_path(@mapping), class: 'form-inline', role: 'form' do %>
+    <div class="form-group">
+      <%= text_field_tag :only, class: 'form-control', placeholder: 'Number of surveys to import' %>
+    </div>
+    <%= submit_tag "Import", class: 'btn btn-success' %>
   <% end %>
 
 </table>
