--- a/app/views/mappings/show.html.erb
+++ b/app/views/mappings/show.html.erb
@@ -44,7 +44,7 @@
 
   <%= form_tag dispatch_surveys_mapping_path(@mapping), class: 'form-inline', role: 'form' do %>
     <div class="form-group">
-      <%= text_field_tag :only, class: 'form-control', placeholder: 'Number of surveys to import' %>
+      <%= text_field_tag :only, params[:only], class: 'form-control', placeholder: 'Number of surveys to import' %>
     </div>
     <%= submit_tag "Import", class: 'btn btn-success' %>
   <% end %>
