--- a/app/views/mappings/show.html.erb
+++ b/app/views/mappings/show.html.erb
@@ -42,7 +42,7 @@
         <td>=></td>
         <td>
           <span class='label label-primary sf-label'>
-            <%= sf_field.label_name %>: <%= sf_field.field_name %>
+            <%= sf_field.label_name %>: <%= sf_field.field_name %>: <%= sf_field.perform_lookups? ? "Lookup" : "Create" %>
           </span>
         </td>
       </tr>
