--- a/app/views/mappings/show.html.erb
+++ b/app/views/mappings/show.html.erb
@@ -14,12 +14,18 @@
   <li><%= @mapping.name %> (<%= @mapping.active? ? "Active" : "Inactive" %>)</li>
 </ol>
 
-<%= form_tag dispatch_surveys_mapping_path(@mapping), class: 'form-inline', role: 'form' do %>
-  <div class="form-group">
-    <%= text_field_tag :only, params[:only], class: 'form-control', placeholder: 'Number of surveys to import' %>
-  </div>
-  <%= submit_tag "Import", class: 'btn btn-success' %>
-<% end %>
+<div class='pull-left'>
+  <%= form_tag dispatch_surveys_mapping_path(@mapping), class: 'form-inline', role: 'form' do %>
+    <div class="form-group">
+      <%= text_field_tag :only, params[:only], class: 'form-control', placeholder: 'Number of surveys to import' %>
+    </div>
+    <%= submit_tag "Import", class: 'btn btn-success' %>
+  <% end %>
+</div>
+
+<div class='pull-right'>
+  <%= button_to "Clone", [:clone, @mapping], class: 'btn', confirm: 'Are you sure?' %>
+</div>
 
 <table class='table'>
   <thead>
