--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user, url: {action: "create"}, html: {class: "nifty_form"} do |f| %>
+<%= form_for @user, html: {class: "nifty_form"} do |f| %>
 
   <div class="form-group">
     <%= f.label :email %><br>
@@ -15,5 +15,25 @@
     <%= f.password_field :password_confirmation %>
   </div>
 
-  <%= f.submit "Sign Up!" %>
+  <div class="form-group">
+    <%= f.label :odk_username %><br>
+    <%= f.text_field :odk_username %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :odk_password %><br>
+    <%= f.text_field :odk_password %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :salesforce_username %><br>
+    <%= f.text_field :sf_username %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :salesforce_password %><br>
+    <%= f.text_field :sf_password %>
+  </div>
+
+  <%= f.submit "Submit" %>
 <% end %>
