--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -16,13 +16,8 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :odk_username %><br>
-    <%= f.text_field :odk_username %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :odk_password %><br>
-    <%= f.text_field :odk_password %>
+    <%= f.label :odk_url %><br>
+    <%= f.text_field :odk_url %>
   </div>
 
   <div class="form-group">
@@ -33,6 +28,11 @@
   <div class="form-group">
     <%= f.label :salesforce_password %><br>
     <%= f.text_field :sf_password %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :salesforce_security_token %><br>
+    <%= f.text_field :sf_security_token %>
   </div>
 
   <%= f.submit "Submit" %>
