--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,10 @@
 </head>
   <body>
     <%= render "shared/header" %>
+    
 
     <div class='container'>
+      <%= render "shared/flash" %>
       <%= render "shared/sidebar" %>
 
         <% if content_for?(:sidebar) %>
