--- a/app/views/mappings/_mapping.html.erb
+++ b/app/views/mappings/_mapping.html.erb
@@ -1,7 +1,14 @@
-<tr>
+<tr class="<% if mapping.active? %> success <% end %>">
   <td><%= mapping.name %></td>
   <td>
     <%= link_to "View", mapping, class: 'btn btn-success' %>
     <%= link_to "Edit", [:edit, mapping], class: 'btn btn-success' %>
+  </td>
+  <td>
+    <% if mapping.active? %>
+      active
+    <% else %>
+      inactive
+    <% end %>
   </td>
 </tr>
