--- a/app/views/mappings/index.html.erb
+++ b/app/views/mappings/index.html.erb
@@ -10,7 +10,7 @@
   <li>Mappings</li>
 </ol>
 
-<table class='table'>
+<table class='table table-striped'>
   <thead>
     <tr>
       <th>Name</th>
