card 35 -- odk auth

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -19,6 +19,17 @@
     <%= f.text_field :odk_url, class: 'form-control' %>
   </div>
 
+
+  <div class="form-group">
+    <%= f.label :odk_username %>
+    <%= f.text_field :odk_username, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :odk_password %>
+    <%= f.text_field :odk_password, class: 'form-control' %>
+  </div>
+
   <div class="form-group">
     <%= f.label :salesforce_username %>
     <%= f.text_field :sf_username, class: 'form-control' %>
