--- a/app/views/mappings/new.html.erb
+++ b/app/views/mappings/new.html.erb
@@ -4,6 +4,9 @@
 </ol>
 
 <h3>Create a new mapping</h3>
+
+
 <div ng-app="mapping">
-  <div ng-controller="MappingCtrl" ng-include="'/ng_templates/mappings/new.html'"></div>
+  <%= render 'loading' %>
+  <div ng-controller="MappingCtrl" ng-hide="loading" ng-include="'/ng_templates/mappings/new.html'"></div>
 </div>
