card 41 -- destroy mapping button

--- a/app/assets/stylesheets/mappings.css.scss
+++ b/app/assets/stylesheets/mappings.css.scss
@@ -33,6 +33,11 @@
   font-size: 25px;
 }
 
+.pull-right .button_to {
+  float: right;
+  margin-left: 5px;
+}
+
 input.destroy-field {
   display: none;
 
