card 60 -- New GUI
* Moooos like Jagger

--- a/app/assets/stylesheets/mapping_fields.css.scss
+++ b/app/assets/stylesheets/mapping_fields.css.scss
@@ -27,3 +27,10 @@
 .external-field-holder {
   overflow: auto;
 }
+
+.list-group {
+  .list-group-item {
+    display: inline-block;
+    margin: 0 5px 0 5px;
+  }
+}
