card 65 -- custom lookup fields

--- a/app/assets/stylesheets/mappings.css.scss
+++ b/app/assets/stylesheets/mappings.css.scss
@@ -47,6 +47,13 @@
   font-size: 25px;
 }
 
+.sf-lookup-label {
+  display: inline-block;
+  background-color: #990;
+  margin-top: 5px;
+  font-size: 25px;
+}
+
 .pull-right .button_to {
   float: right;
   margin-left: 5px;
