--- a/app/assets/stylesheets/mappings.css.scss
+++ b/app/assets/stylesheets/mappings.css.scss
@@ -80,3 +80,11 @@ input.destroy-field {
 .white {
   color: white;
 }
+
+.sf-row.affix {
+  position: fixed;
+  top: 0;
+  width: 80%;
+  background-color: white;
+  z-index: 1000;
+}
