card 69 - Changing object creation workflow

--- a/app/views/mappings/new.html.erb
+++ b/app/views/mappings/new.html.erb
@@ -8,5 +8,5 @@
 
 <div ng-app="mapping">
   <%= render 'loading' %>
-  <div ng-controller="MappingCtrl" ng-hide="loading" ng-include="'/ng_templates/mappings/new.html'"></div>
+  <div ng-controller="NewMappingCtrl" ng-hide="loading" ng-include="'/ng_templates/mappings/new.html'"></div>
 </div>
