card 69 - Fixing some affix issues

--- a/app/assets/stylesheets/mappings.css.scss
+++ b/app/assets/stylesheets/mappings.css.scss
@@ -88,6 +88,10 @@ input.destroy-field {
   z-index: 1000;
 }
 
+.sf-affixed {
+  margin-top: 500px;
+}
+
 .sf-field {
   color: white !important;
   font-weight: bolder;
