card 69 - Adding lookup functionality for reference fields

--- a/app/assets/stylesheets/mappings.css.scss
+++ b/app/assets/stylesheets/mappings.css.scss
@@ -81,6 +81,15 @@ input.destroy-field {
   color: white;
 }
 
+.sf-row {
+
+  hr {
+    margin-top: 5px;
+    margin-bottom: 10px;
+  }
+
+}
+
 .sf-row.affix {
   position: fixed;
   top: 0;
