--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -19,7 +19,6 @@
     <%= f.text_field :odk_url, class: 'form-control' %>
   </div>
 
-
   <div class="form-group">
     <%= f.label :odk_username %>
     <%= f.text_field :odk_username, class: 'form-control' %>
@@ -31,28 +30,33 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :salesforce_username %>
+    <%= f.label :sf_username, "Salesforce Username" %>
     <%= f.text_field :sf_username, class: 'form-control' %>
   </div>
 
   <div class="form-group">
-    <%= f.label :salesforce_password %>
+    <%= f.label :sf_password, "Salesforce Password" %>
     <%= f.text_field :sf_password, class: 'form-control' %>
   </div>
 
   <div class="form-group">
-    <%= f.label :salesforce_security_token %>
+    <%= f.label :sf_security_token, "Salesforce Security Token" %>
     <%= f.text_field :sf_security_token, class: 'form-control' %>
   </div>
 
   <div class="form-group">
-    <%= f.label :salesforce_client_key %>
+    <%= f.label :sf_app_key, "Salesforce Client Key" %>
     <%= f.text_field :sf_app_key, class: 'form-control' %>
   </div>
 
   <div class="form-group">
-    <%= f.label :salesforce_client_secret %>
+    <%= f.label :sf_app_secret, "Salesforce App Secret" %>
     <%= f.text_field :sf_app_secret, class: 'form-control' %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :sf_host, "Salesforce Host" %>
+    <%= f.text_field :sf_host, class: 'form-control', placeholder: "Defaults to login.salesforce.com" %>
   </div>
 
   <%= f.submit "Submit", class: 'btn btn-primary' %>
