card 69 - Fixing UI bugs

--- a/app/assets/stylesheets/bootstrap_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.css.scss
@@ -1,5 +1,14 @@
-$nav-tabs-active-link-hover-bg: 'transparent';
+// .well {
+//   padding-left: 0px;
+//   padding-right: 0px;
+//   padding-top: 0px;
+// }
 
-.tab-content {
-  padding-top: 10px;
+// .panel-body {
+//   padding-top: 0px;
+// }
+
+
+.list-group-item {
+  position: static !important;
 }
