--- a/app/assets/stylesheets/mappings.css.scss
+++ b/app/assets/stylesheets/mappings.css.scss
@@ -25,6 +25,8 @@
 }
 
 .odk-row {
+  padding-bottom: 150px;
+
   .odk-fields {
     max-height: 400px;
     overflow: auto;
@@ -82,6 +84,7 @@ input.destroy-field {
 }
 
 .sf-row {
+  top: -250px;
 
   hr {
     margin-top: 5px;
@@ -95,10 +98,12 @@ input.destroy-field {
   top: 0;
   width: 76%;
   z-index: 1000;
+  -webkit-transition: all 1s ease-in;
+  transition: all 0.5s ease-in;
 }
 
 .sf-affixed {
-  margin-top: 100px;
+  margin-top: 225px;
 }
 
 .sf-field {
