--- a/app/assets/stylesheets/mappings.css.scss
+++ b/app/assets/stylesheets/mappings.css.scss
@@ -108,12 +108,12 @@ input.destroy-field {
 
 .sf-field {
   color: white !important;
-  font-weight: bolder;
-  text-shadow: -1px 0 #333333, 0 1px #333333, 1px 0 #333333, 0 -1px #333333;
+  // font-weight: bolder;
+  // text-shadow: -1px 0 #333333, 0 1px #333333, 1px 0 #333333, 0 -1px #333333;
 
   a {
     color: white !important;
-    font-weight: bolder;
+    // font-weight: bolder;
     text-shadow: -1px 0 #333333, 0 1px #333333, 1px 0 #333333, 0 -1px #333333;
   }
 }
