middle align table data, padd4, lh1

--- a/app/assets/stylesheets/bootstrap_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.css.scss
@@ -16,3 +16,10 @@
 body {
   font-family : Verdana,Helvetica,Arial,serif;
 }
+
+td {
+  vertical-align: middle;
+  padding: 4px;
+  line-height: 1;
+  pdding: 4px;
+}
