changed padding and line height for mapping page

--- a/app/assets/stylesheets/bootstrap_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.css.scss
@@ -15,11 +15,18 @@
 
 body {
   font-family : Verdana,Helvetica,Arial,serif;
+  line-height: 1;
 }
 
-td {
-  vertical-align: middle;
-  padding: 4px;
+.nav-tabs>li>a {
   line-height: 1;
-  pdding: 4px;
+}
+
+.table>thead>tr>th, .table>thead>tr>td, .table>tbody>tr>th, .table>tbody>tr>td, .table>tfoot>tr>th, .table>tfoot>tr>td {
+  vertical-align: middle;
+  padding-left: 8px;
+  padding-bottom: 4px;
+  padding-right: 8px;
+  padding-top: 4px;
+  line-height: 1;
 }
