--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,7 +26,7 @@
 
   <div class="form-group">
     <%= f.label :odk_password %>
-    <%= f.text_field :odk_password, class: 'form-control' %>
+    <%= f.password_field :odk_password, class: 'form-control' %>
   </div>
 
   <div class="form-group">
@@ -36,7 +36,7 @@
 
   <div class="form-group">
     <%= f.label :sf_password, "Salesforce Password" %>
-    <%= f.text_field :sf_password, class: 'form-control' %>
+    <%= f.password_field :sf_password, class: 'form-control' %>
   </div>
 
   <div class="form-group">
