--- a/app/assets/stylesheets/bootstrap_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.css.scss
@@ -14,7 +14,7 @@
 }
 
 body {
-  font-family : Verdana,Helvetica,Arial,serif;
+  font-family : 'Open Sans',Verdana,Helvetica,Arial,serif;
   line-height: 1;
 }
 
