--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5,3 +5,6 @@
 @import "odk_fields";
 @import "edit";
 @import "main";
+@import "angular-ui-tree";
+@import "ng-ui-tree-overrides";
+@import "metrics";
