Issue #26 - Adding submission queue and changing processing
* Submissions are now processed in their own resque queue
* Adding a submissions controller to view submissions and reprocess
* Adding state_machine to submissions
* Storing the ODK data on import (not used, just in case)

--- a/app/views/mappings/_mapping.html.erb
+++ b/app/views/mappings/_mapping.html.erb
@@ -9,5 +9,6 @@
   </td>
   <td>
     <%= link_to "View", mapping, class: 'btn btn-success' %>
+    <%= link_to "Process Log", [mapping, :submissions], class: 'btn btn-warning' if mapping.import %>
   </td>
 </tr>
