--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,17 +8,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <!-- <a class="navbar-brand" href="/#/product-search">The Bridge</a> -->
-      <a class="navbar-brand" href="<%= mappings_path%>" ng-click="$event.stopPropagation()">The Bridge</a>
+      <a class="navbar-brand" href="/#/product-search">The Bridge</a>
+      <!-- <a class="navbar-brand" href="<%= mappings_path%>" ng-click="$event.stopPropagation()">The Bridge</a> -->
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
       <% if current_user %>
         <ul class="nav navbar-nav">
-          <!-- <li>
+          <li>
             <%= link_to "Integrations", "/#/integrations" %>
-          </li> -->
+          </li>
           <li>
             <%= link_to "Mappings", mappings_path, 'ng-click' => "$event.stopPropagation()" %>
           </li>
