Issue 39 - Correcting a number of problems plus record type
* Fixing issues with creating a new mapping due to Angular
  upgrade
* Identifying RecordTypeId fields as a special case
* Importing RecordTypeId fields as a special kind of lookup

--- a/app/views/mappings/new.html.erb
+++ b/app/views/mappings/new.html.erb
@@ -5,8 +5,7 @@
 
 <h3>Create a new mapping</h3>
 
-
 <div ng-app="the_bridge">
   <%= render 'loading' %>
-  <div ng-controller="NewMappingCtrl" ng-hide="loading" ng-include="'/the_bridge_templates/mappings/new.html'"></div>
+  <div ng-view></div>
 </div>
