--- a/app/assets/stylesheets/product_search.css.scss
+++ b/app/assets/stylesheets/product_search.css.scss
@@ -1,85 +1,73 @@
-.search-row {
-  margin: 10px;
+.search-container {
+  margin: 0;
+  border-radius: 4px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #CCC;
+  background-color: #F5F5F5;
+
+  .sub-heading {
+    color: #A3A3A3;
+  }
+
+  .search-box {
+    padding: 1.6em 3em 3em 3em;
+  }
+
+  .no-padding {
+    padding: 0;
+  }
+
+  .search-type {
+    float: right;
+    min-width: 216px;
+  }
+
+  .search-field {
+    padding-bottom: 0.5em;
+  }
 }
 
 .product-list {
+  $product-padding: 1em;
+
   .product {
-    margin: 10px;
-    padding: 1em;
-    border-color: #1ABC9C;
-    border-radius: 4px;
-    border-width: 2px;
-    border-style: solid;
-    height: 12em;
-    width: 12em;
-
-    .logo {
-      // width: 10em;
-      // text-align: center;
-      position: absolute;
-    }
-
-    $line-height: 1.4;
-    $lines-to-show: 8;
-    $font-size: 13px;
-
-    .info {
-      height: 100%;
-      padding: 0;
-      margin: 0;
-
-      .actions {
-        left: 0;
-        bottom: -1em;
-        left: -1em;
-        right: -1em;
-        padding-bottom: 0.5em;
-        padding-left: 1em;
-        padding-right: 2em;
-        padding-top: 0.5em;
-        position: absolute;
-        background-color: #1ABC9C;
-      }
-    }
+    padding: $product-padding;
+    margin: 0;
+    position: relative;
+    height: 14em;
 
     .description {
-      text-align: justify;
-      display: block;
-      display: -webkit-box;
-      height: $font-size*$line-height*$lines-to-show; /* Fallback for non-webkit */
-      margin: 0 auto;
-      font-size: $font-size;
-      line-height: $line-height;
-      -webkit-line-clamp: $lines-to-show;
-      -webkit-box-orient: vertical-text;
+      font-size: 0.8em;
+      line-height: 1.2;
+      height: 6em;
       overflow: hidden;
       text-overflow: ellipsis;
-      position: absolute;
-      top: -0.2em;
     }
-  }
 
-  .product .logo,
-  .product .info
-  {
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    -webkit-transition: opacity 400ms;
-    -moz-transition: opacity 400ms;
-    -ms-transition: opacity 400ms;
-    -o-transition: opacity 400ms;
-    transition: opacity 400ms;
-  }
+    .rating {
+      padding: 0.5em 0;
+      position: absolute;
+      bottom: $product-padding;
+      left: $product-padding;
+    }
 
-  .product .info,
-  .product:hover .logo
-  {
-    opacity: 0;
-  }  
+    .details-link {
+      color: #000;
+      padding: 0.5em;
+      position: absolute;
+      bottom: $product-padding;
+      right: $product-padding;
+      border-radius: 4px;
+      border-width: 1px;
+      border-style: solid;
+      border-color: #CCC;
+      background-color: #FFF;
+    }
 
-  .product .logo,
-  .product:hover .info {
-    opacity: 1;
+    .details-link:hover {
+      text-decoration: none;
+    }
   }
 
   .product.ng-enter,
@@ -97,12 +85,10 @@
   .product.ng-enter.ng-enter-active,
   .product.ng-leave {
     opacity: 1;
-    top: 0;
   }
    
   .product.ng-leave.ng-leave-active,
   .product.ng-enter {
     opacity: 0;
-    top: -50px;
   }
 }
