--- a/app/assets/stylesheets/product_search.css.scss
+++ b/app/assets/stylesheets/product_search.css.scss
@@ -36,6 +36,11 @@
     margin: 0;
     position: relative;
     height: 14em;
+    
+  .product:hover {
+      background-color: #D4EBF6;
+    }
+  }
 
     .description {
       font-size: 0.8em;
