try product-list

--- a/app/assets/stylesheets/product_search.css.scss
+++ b/app/assets/stylesheets/product_search.css.scss
@@ -37,7 +37,7 @@
     position: relative;
     height: 14em;
   
-  .product:hover {
+  .product-list:hover {
     background-color: #D4EBF6;
   }
   
