blue background on hover for products

--- a/app/assets/stylesheets/product_search.css.scss
+++ b/app/assets/stylesheets/product_search.css.scss
@@ -29,7 +29,12 @@
 }
 
 .product-list {
+  margin: 0;
   $product-padding: 1em;
+
+  .product:hover {
+    background-color: #D4EBF6;
+  }
 
   .product {
     padding: $product-padding;
