--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/#/product-search">The Bridge</a>
+      <a class="navbar-brand" href="/#/product-search">OpenFn</a>
       <!-- <a class="navbar-brand" href="<%= mappings_path%>" ng-click="$event.stopPropagation()">The Bridge</a> -->
     </div>
 
@@ -17,10 +17,10 @@
       <% if current_user %>
         <ul class="nav navbar-nav">
           <li>
-            <%= link_to "Integrations", "/#/integrations" %>
+            <%= link_to "Marketplace", "/#/product-search" %>
           </li>
           <li>
-            <%= link_to "Mappings", mappings_path, 'ng-click' => "$event.stopPropagation()" %>
+            <%= link_to "Integrations - maps", mappings_path, 'ng-click' => "$event.stopPropagation()" %>
           </li>
           <% if current_user.admin? %>
             <li>
