--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -22,6 +22,11 @@
           <li>
             <%= link_to "Integrations - maps", mappings_path, 'ng-click' => "$event.stopPropagation()" %>
           </li>
+          <% if current_user.admin? %>
+            <li>
+              <%= link_to "Metrics", "/#/metrics/organisation" %>
+            </li>
+          <% end %>
           <li>
             <%= link_to "Settings", edit_user_path(current_user), 'ng-click' => "$event.stopPropagation()" %>
           </li>
